调整变量